--- a/jQuery_Form/form_check.html
+++ b/jQuery_Form/form_check.html
@@ -6,11 +6,10 @@
   <title>Document</title>
 </head>
 <body>
-  
   <input type="checkbox" nama="html" value="HTML" id="html">
   <label for="html">HTML</label>
   <input type="checkbox" name="css" value="CSS" id="css">
-  <label for="CSS">CSS</label>
+  <label for="css">CSS</label>
   <input type="checkbox" name="javascript" value="JavaScript" id="JavaScript">
   <label for="JavaScript">JavaScript</label>
   <input type="checkbox" name="php" value="php" id="php">
@@ -28,6 +27,7 @@ $(function() {
 $("label,input[type='checkbox']").click(function(){
     $("label").css("background", "");
     $(":checked").each(function() {
+        // labelのforに、チェックした要素のidをいれる
         $("label[for='"+$(this).attr("id")+"']").css("background", "#CCC");
     });
 });
